summary: Découvrez les nouveautés de la mise en cache BlueXP Edge. 
---
= Nouveautés de la mise en cache BlueXP Edge
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les nouveautés de la mise en cache BlueXP Edge.



== 1er août 2023 (version 2.3)

Cette version corrige les problèmes décrits dans le https://docs.netapp.com/us-en/bluexp-edge-caching/fixed-issues.html["Problèmes résolus"]. Les mises à jour de logiciels sont disponibles à l'adresse https://docs.netapp.com/us-en/bluexp-edge-caching/download-gfc-resources.html#download-required-resources["cette page"].



== 5 avril 2023 (version 2.2)

Cette version fournit les nouvelles fonctionnalités répertoriées ci-dessous. Il corrige également les problèmes décrits dans le https://docs.netapp.com/us-en/bluexp-edge-caching/fixed-issues.html["Problèmes résolus"].



=== Prise en charge de Global File cache sur les systèmes Cloud Volumes ONTAP déployés dans Google Cloud

Une nouvelle licence Edge cache est disponible lors du déploiement d'un système Cloud Volumes ONTAP dans Google Cloud. Vous pouvez déployer un système Global File cache Edge pour chaque 3 To de capacité achetée sur le système Cloud Volumes ONTAP.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/concept-licensing.html#packages["En savoir plus sur le package de licences Edge cache."]



=== L'assistant d'installation et l'interface utilisateur de configuration GFC ont été améliorés pour enregistrer les licences NetApp



=== Optimus PSM amélioré pour configurer la fonctionnalité Edge Sync



== 24 octobre 2022 (version 2.1)

Cette version fournit les nouvelles fonctionnalités répertoriées ci-dessous. Il corrige également les problèmes décrits dans le https://docs.netapp.com/us-en/bluexp-edge-caching/fixed-issues.html["Problèmes résolus"].



=== Global File cache est désormais disponible avec tout nombre de licences
