@@ -21,7 +21,6 @@
   <block id="328a2c1e7778e9edaf79d90c51409ac4" category="list-text">Si vous avez un compte au niveau du client, vous pouvez ajouter un ou plusieurs comptes NSS.</block>
   <block id="f3a29486bed19a90f2da6d007818b427" category="list-title">Étapes</block>
   <block id="b50f0a46135bcb7083b1f2f82032fc26" category="inline-image-macro">Capture d'écran du menu aide où support est la première option répertoriée</block>
-  <block id="19d089db572ee6a1e154a0c9c9e57bfd" category="paragraph">NetApp utilise Microsoft Azure Active Directory comme fournisseur d'identités pour les services d'authentification spécifiques au support et aux licences.</block>
   <block id="465ec6d5eafa3524c948c99d8bfcd306" category="list-text">Sur la page de connexion, indiquez l'adresse e-mail et le mot de passe que vous avez enregistrés sur le site de support NetApp pour réaliser le processus d'authentification.</block>
   <block id="cbc6cc3bb022583403171b447b2a962c" category="paragraph">Ces actions permettent à BlueXP d'utiliser votre compte NSS pour des opérations telles que le téléchargement de licences, la vérification de la mise à niveau logicielle et les inscriptions de support futures.</block>
   <block id="cf3a2d2c139bf5c9cc87fe714bfff3b1" category="paragraph">Notez ce qui suit :</block>
@@ -54,8 +53,6 @@
   <block id="00c5fef3bb9d593ae96bf5d2ee60354a" category="paragraph">Rejoignez la communauté BlueXP pour suivre des discussions en cours ou en créer de nouveaux.</block>
   <block id="5b6cf869265c13af8566f192b4ab3d2a" category="list-text">Documentation</block>
   <block id="a4a6c2ea0078252eac2d74ef3e6c917c" category="paragraph">La documentation BlueXP que vous consultez actuellement.</block>
-  <block id="80b1b0d2b1ebf2b3cba2d25759801afd" category="list-text">Courrier électronique :ng-cloudmanager-feedback@netapp.com[E-mail de commentaires]</block>
-  <block id="6702efec14563f45f1ee2f8c613b8ad8" category="paragraph">Nous accordons une grande importance à vos commentaires. Envoyez vos commentaires pour nous aider à améliorer BlueXP.</block>
   <block id="82812db645b6ff5e9c2a24ddfb66c8d6" category="paragraph">Outre les options d'auto-support mentionnées ci-dessus, vous pouvez travailler avec un spécialiste du support NetApp pour résoudre tous les problèmes après avoir activé le service de support.</block>
   <block id="d63bf50426f4c712554faec55b30c548" category="list-text">*Service* : sélectionnez le service auquel le problème est associé. Par exemple, BlueXP lorsqu'il est spécifique à un problème de support technique avec des flux de travail ou des fonctionnalités au sein du service.</block>
   <block id="2e50c5f85523f0aba9ff2db10f18279c" category="list-text">*Environnement de travail* : si applicable au stockage, sélectionnez *Cloud Volumes ONTAP* ou *sur site*, puis l'environnement de travail associé.</block>
@@ -359,14 +356,6 @@
   <block id="69464e68a5cdd0b54694ac92276fa1a3" category="sidebar">Problèmes résolus</block>
   <block id="be11c74c1dd7f307bb80183a90dc2067" category="sidebar">Commencez</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Connaissances et support</block>
-  <block id="98121bd163ebeee7679c81cb42cf7994" category="sidebar">Déployez les composants</block>
-  <block id="948b7b04e4691581ca1041a28de513f9" category="sidebar">Déployez Cloud Volumes ONTAP en tant que plateforme de stockage</block>
-  <block id="e289bcbad000bdd54bcb8ae57eec662f" category="sidebar">Former les utilisateurs</block>
-  <block id="813011e2103649bb71f124adedcc10ea" category="sidebar">Communauté sur les blogs</block>
-  <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">Communauté NetApp</block>
-  <block id="bd5465eb0e8cf8f303aee7ea9420c8b1" category="sidebar">Blog BlueXP</block>
-  <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Webinaires sur le cloud</block>
-  <block id="4c7d5d7dfde4a7bd82b54348182043d3" category="sidebar">Autres ressources</block>
   <block id="06c2cea18679d64399783748fa367bdd" category="inline-image-macro">Une seule</block>
   <block id="bb28d23fa130988b09464a6057aef85b" category="paragraph-title"><block ref="58f667aaf05f87159670e12bd9bc076b" category="inline-image-macro-rx" type="image"></block> Déployez Cloud Volumes ONTAP</block>
   <block id="aada29daee1d64ed0fe907043855cb7e" category="inline-image-macro">Deux</block>
@@ -440,8 +429,6 @@
   <block id="402a1502f5c39fb55ca79d59e3184a34" category="section-title">Optimus PSM amélioré pour configurer la fonctionnalité Edge Sync</block>
   <block id="254d5c87d5ab437395f866390ea49cd0" category="inline-link">Lancement d'Cloud Volumes ONTAP dans Google Cloud</block>
   <block id="17212542e3e7df3bdd7a3df903ed851c" category="paragraph"><block ref="17212542e3e7df3bdd7a3df903ed851c" category="inline-link-macro-rx"></block></block>
-  <block id="91770f038cd944a1d3b9b347edeb2b10" category="sidebar">Nouveautés</block>
-  <block id="f79eca534d02cb718a61576ea3936648" category="sidebar">Utilisations de la mise en cache BlueXP Edge</block>
   <block id="55be43fdae1edd255f27ede47e8019f9" category="summary">Il y a de nombreuses exigences à connaître avant de commencer à déployer la mise en cache BlueXP Edge dans le cloud et dans vos bureaux distants.</block>
   <block id="d26f2f54b754de8a0e01b774a1618379" category="doc">Avant de commencer à déployer la mise en cache BlueXP Edge</block>
   <block id="e80f84b41f3e11bacacc88e54c95bd86" category="section-title">Considérations relatives à la conception centrale de la mise en cache à la périphérie BlueXP</block>
@@ -651,7 +638,6 @@
   <block id="d1d79e408906f8fa0a5419fb3745be85" category="sidebar">Prérequis pour la mise en cache en périphérie BlueXP</block>
   <block id="a9d0b37e45f41dd1d52ab5a771557b0b" category="sidebar">Déployez la mise en cache BlueXP Edge</block>
   <block id="df1f69fe50ad765ccb959276db879f1f" category="sidebar">Utilisez la mise en cache BlueXP Edge</block>
-  <block id="1b16252715ee63d29e9c78d78a69c523" category="sidebar">Déployez le serveur et le cœur de gestion de la mise en cache BlueXP Edge</block>
   <block id="52ba8ac12050d2494572b940a0d65b25" category="list-text"><block ref="52ba8ac12050d2494572b940a0d65b25" category="inline-link-rx"></block></block>
   <block id="91ea063dfcaf2cbae3a931cc1d0a28a8" category="paragraph">Nous vous recommandons d'augmenter ce volume suffisamment pour prendre en charge le jeu de données total de l'application, ainsi que la capacité à évoluer en conséquence en fonction de la croissance du jeu de données. Si l'environnement de travail compte plusieurs agrégats, reportez-vous à<block ref="89800d58631629b790a13a9de7981f0e" category="inline-link-rx"></block> pour déterminer quel agrégat dispose de l'espace le plus disponible pour le nouveau volume.</block>
   <block id="9d06990508d25d367d9158c6558eb9c8" category="list-text"><block ref="9d06990508d25d367d9158c6558eb9c8" category="inline-link-macro-rx"></block></block>
@@ -740,7 +726,6 @@
   <block id="c80862bbcf8f857da81705513310d33a" category="paragraph"><block ref="e439e61317b9d8e0964fc4278b02da4f" category="inline-link-rx"></block>
 <block ref="6521fb91943407eb7773f8de6fb3c073" category="inline-link-rx"></block></block>
   <block id="1ff2a72d772b591ce092f04090df1f7d" category="list-text">Logiciel de mise en cache Edge BlueXP :</block>
-  <block id="4600738f0591f7ca9b82d1b1873f082f" category="paragraph"><block ref="4600738f0591f7ca9b82d1b1873f082f" category="inline-link-rx"></block></block>
   <block id="0bc9b34d46e682262d4fe6eb551bdc94" category="paragraph"><block ref="0bc9b34d46e682262d4fe6eb551bdc94" category="inline-link-rx"></block></block>
   <block id="e2ed07bb6933c98e532659727830bc52" category="inline-link-macro">Effectuez la procédure suivante</block>
   <block id="ab22ada227591d3e283d838dc6821bf3" category="paragraph"><block ref="820d518b33801e5de2462ff4ce963d09" category="inline-link-macro-rx"></block> Pour mettre à niveau votre logiciel BlueXP Edge Caching.</block>
@@ -770,4 +755,8 @@
   <block id="37224270f6fe9a8b986d9aebd0580f24" category="paragraph">Dans Azure, cette opération s'exécute sur une machine virtuelle D8s_V4 ou une machine virtuelle équivalente (8 vCPU/32 Go de RAM) avec un SSD premium de 127 Go</block>
   <block id="de3597f52173f419dfcb5b6093c8f91b" category="paragraph">Dans AWS, cette opération s'exécute sur une instance m4.2xlarge ou équivalente (8 vCPU/32 Go de RAM) avec un SSD générique de 127 Go</block>
   <block id="13a8d1c98f73a6d8e45079d3d40dd107" category="paragraph">Dans Google Cloud, il s'exécute sur une instance n2-standard-8 ou équivalente (8 vCPU/32 Go de RAM) avec un SSD générique de 127 Go</block>
+  <block id="d59e0b46782e48a01966e5c7ccc38d17" category="paragraph">NetApp utilise Microsoft Entra ID comme fournisseur d'identité pour les services d'authentification spécifiques à la prise en charge et à l'octroi de licences.</block>
+  <block id="70d2aaea6b19d033a76faef23053a806" category="section-title">6 mai 2024 (version 2.4)</block>
+  <block id="33ac6c6578bc8387b0ba6aaebc3f939a" category="paragraph">Cette version corrige certains problèmes mineurs. Le pack logiciel mis à jour est disponible sur le site<block ref="89fd140dfa15c4587519958830d6000f" category="inline-link-rx"></block>.</block>
+  <block id="39e223ecfe3ee5dc48a36bdee3d5da31" category="paragraph"><block ref="39e223ecfe3ee5dc48a36bdee3d5da31" category="inline-link-rx"></block></block>
 </blocks>
